--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="orange">#FFA500</color>
     <color name="yellow">#FFFF00</color>
     <color name="white">#FFFFFF</color>
+    <color name="blue">#1033D3</color>
 </resources>
